# WinOcr

./: .gitignore  AGENTS.md  README.md  install_winocr.ps1  pyproject.toml  requirements.txt  winocr_pdf.py
.venv-winocr/: pyvenv.cfg
.venv-winocr/Scripts/: activate  activate.bat
scripts/: verify_install.ps1
src/pdf_text_overlay/: __init__.py  __main__.py  cli.py  debug.py  fonts.py  geometry.py  ocr_io.py  overlay.py  text_utils.py
src/pdf_text_overlay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pdf_text_overlay/resources/: __init__.py
src/pdf_text_overlay/resources/examples/: ocr_schema_example.json
src/pdf_text_overlay/resources/fonts/: README.txt
tests/: __init__.py  test_cli_entrypoint.py  test_overlay_utils.py
